// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styler factories createSystemNumericStyler works with responsive value (with default responsive value) 1`] = `
<DocumentFragment>
  .css-1pqr7g2 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 20px;
}

<div
    class="css-1pqr7g2"
  />
  .css-1pqr7g2 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 20px;
}

<div
    class="css-1pqr7g2"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemNumericStyler works with responsive value (with default simple value) 1`] = `
<DocumentFragment>
  .css-1mdabbm {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 16px;
}

<div
    class="css-1mdabbm"
  />
  .css-jcrk0j {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 24px;
}

<div
    class="css-jcrk0j"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemNumericStyler works with responsive value (without default value) 1`] = `
<DocumentFragment>
  .css-1pqr7g2 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 20px;
}

<div
    class="css-1pqr7g2"
  />
  .css-1iuax7x {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
}

<div
    class="css-1iuax7x"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemNumericStyler works with simple value (with default value) 1`] = `
<DocumentFragment>
  .css-1pqr7g2 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 20px;
}

<div
    class="css-1pqr7g2"
  />
  .css-1pqr7g2 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 20px;
}

<div
    class="css-1pqr7g2"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemNumericStyler works with simple value (without default value) 1`] = `
<DocumentFragment>
  .css-1pqr7g2 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 20px;
}

<div
    class="css-1pqr7g2"
  />
  .css-1iuax7x {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
}

<div
    class="css-1iuax7x"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemStringStyler works with responsive value (with default responsive value) 1`] = `
<DocumentFragment>
  .css-g4jko9 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: #FFFFFF;
}

<div
    class="css-g4jko9"
  />
  .css-g4jko9 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: #FFFFFF;
}

<div
    class="css-g4jko9"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemStringStyler works with responsive value (with default responsive value) 2`] = `
<DocumentFragment>
  .css-9sndi4 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: #EA2E49;
}

<div
    class="css-9sndi4"
  />
  .css-9sndi4 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: #EA2E49;
}

<div
    class="css-9sndi4"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemStringStyler works with responsive value (with default simple value) 1`] = `
<DocumentFragment>
  .css-g4jko9 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: #FFFFFF;
}

<div
    class="css-g4jko9"
  />
  .css-9sndi4 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: #EA2E49;
}

<div
    class="css-9sndi4"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemStringStyler works with responsive value (without default value) 1`] = `
<DocumentFragment>
  .css-g4jko9 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: #FFFFFF;
}

<div
    class="css-g4jko9"
  />
  .css-g4jko9 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: #FFFFFF;
}

<div
    class="css-g4jko9"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemStringStyler works with simple value (with default value) 1`] = `
<DocumentFragment>
  .css-109oslm {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: black;
}

<div
    class="css-109oslm"
  />
  .css-g4jko9 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: #FFFFFF;
}

<div
    class="css-g4jko9"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemStringStyler works with simple value (without default value) 1`] = `
<DocumentFragment>
  .css-g4jko9 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: #FFFFFF;
}

<div
    class="css-g4jko9"
  />
  .css-1iuax7x {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
}

<div
    class="css-1iuax7x"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemStyle takes last value from responsive value if breakpoint exceeds the range (with default responsive) 1`] = `
<DocumentFragment>
  .css-ch3tt0 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 8px;
}

<div
    class="css-ch3tt0"
  />
  .css-ch3tt0 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 8px;
}

<div
    class="css-ch3tt0"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemStyle takes last value from responsive value if breakpoint exceeds the range (with default responsive) 2`] = `
<DocumentFragment>
  .css-ch3tt0 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 8px;
}

<div
    class="css-ch3tt0"
  />
  .css-ch3tt0 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 8px;
}

<div
    class="css-ch3tt0"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemStyle takes last value from responsive value if breakpoint exceeds the range (with default responsive) 3`] = `
<DocumentFragment>
  .css-1mdabbm {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 16px;
}

<div
    class="css-1mdabbm"
  />
  .css-ch3tt0 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 8px;
}

<div
    class="css-ch3tt0"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemStyle takes last value from responsive value if breakpoint exceeds the range (with default simple) 1`] = `
<DocumentFragment>
  .css-cvk9v3 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 4px;
}

<div
    class="css-cvk9v3"
  />
  .css-cvk9v3 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 4px;
}

<div
    class="css-cvk9v3"
  />
  .css-cvk9v3 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 4px;
}

<div
    class="css-cvk9v3"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemStyle takes last value from responsive value if breakpoint exceeds the range (with default simple) 2`] = `
<DocumentFragment>
  .css-cvk9v3 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 4px;
}

<div
    class="css-cvk9v3"
  />
  .css-1mdabbm {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 16px;
}

<div
    class="css-1mdabbm"
  />
  .css-cvk9v3 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 4px;
}

<div
    class="css-cvk9v3"
  />
  ,
</DocumentFragment>
`;

exports[`styler factories createSystemStyle takes the value from default responsive value if is not specified in prop (with default) 1`] = `
<DocumentFragment>
  .css-1eksjgu {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 20px;
  test: 8px;
}

<div
    class="css-1eksjgu"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemStyle takes the value from default responsive value if is not specified in prop (with default) 2`] = `
<DocumentFragment>
  .css-ch3tt0 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 8px;
}

<div
    class="css-ch3tt0"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemStyle works with responsive value (with default responsive value) 1`] = `
<DocumentFragment>
  .css-cvk9v3 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 4px;
}

<div
    class="css-cvk9v3"
  />
  .css-cvk9v3 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 4px;
}

<div
    class="css-cvk9v3"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemStyle works with responsive value (with default simple value) 1`] = `
<DocumentFragment>
  .css-1yk49p6 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 0;
}

<div
    class="css-1yk49p6"
  />
  .css-ch3tt0 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 8px;
}

<div
    class="css-ch3tt0"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemStyle works with responsive value (without default value) 1`] = `
<DocumentFragment>
  .css-cvk9v3 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 4px;
}

<div
    class="css-cvk9v3"
  />
  .css-1iuax7x {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
}

<div
    class="css-1iuax7x"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemStyle works with responsive value (without default value) 2`] = `
<DocumentFragment>
  .css-ch3tt0 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 8px;
}

<div
    class="css-ch3tt0"
  />
  .css-1iuax7x {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
}

<div
    class="css-1iuax7x"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemStyle works with simple value (with default value) 1`] = `
<DocumentFragment>
  .css-cvk9v3 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 4px;
}

<div
    class="css-cvk9v3"
  />
  .css-cvk9v3 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 4px;
}

<div
    class="css-cvk9v3"
  />
</DocumentFragment>
`;

exports[`styler factories createSystemStyle works with simple value (without default value) 1`] = `
<DocumentFragment>
  .css-cvk9v3 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 4px;
}

<div
    class="css-cvk9v3"
  />
  .css-1iuax7x {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
}

<div
    class="css-1iuax7x"
  />
</DocumentFragment>
`;
